# osproj

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  bochsrc  bx_enh_dbg.ini  grub.cfg  indent.sh  link.ld  mkimg.sh  resource.txt
drivers/: CMakeLists.txt  Makefile  pci.c
drivers/block/: Makefile  ata.c  blkdev.c
drivers/char/: Makefile  chardev.c  devmem.c  pci.c  serial.c  tty.c  vga_console.c  vga_text.c  vga_text.h
fs/: CMakeLists.txt  Makefile  vfs.c
include/: acpi.h  apic.h  cpu.h  errno.h  interrupt.h  kernel.h  mm.h  multiboot.h  panic.h  pic.h  printk.h  sched.h  slab.h  time.h
include/asm/: cpuins.h  ring0.h
include/drivers/: block.h  char.h  pci.h
include/drivers/block/: ata.h
include/drivers/char/: devmem.h  pci.h  serial.h  tty.h  vga_console.h
include/fs/: vfs.h
include/lib/: bst.h  fifo.h  list.h  string.h
include/mm/: buddy.h  mapping.h  mm.h  mmap.h  slab.h
kernel/: CMakeLists.txt  Makefile  acpi.c  apic.c  cpu.c  head.s  interrupt.c  interrupt.s  isr.s  main.c  panic.c  pic.c  printk.c  sched.c  time.c
lib/: CMakeLists.txt  Makefile  bst.c  fifo.c  list.c  string.c
mm/: CMakeLists.txt  Makefile  buddy.c  init.c  mapping.c  memman.c  mmap.c  page.c  slab.c
